--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "fabpot/silex-skeleton",
-    "description": "A pre-configured skeleton for the Silex microframework",
-    "license": "MIT",
+    "name": "metamoris/frontend",
+    "description": "metamoris frontend application",
+    "license": "proprietary",
     "type": "project",
     "require": {
         "php": ">=5.5.9",
@@ -20,7 +20,9 @@
         "symfony/security": "~2.6",
         "symfony/translation": "~2.6",
         "symfony/twig-bridge": "~2.6",
-        "symfony/validator": "~2.6"
+        "symfony/validator": "~2.6",
+        "symfony/yaml":"v2.7.0"
+
     },
     "autoload": {
         "psr-0": { "": "src/" }
