--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,6 @@ RewriteEngine on
 RewriteBase /challenger
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ web/index.php [L]
+
+RewriteCond %{HTTP_HOST} ^www\.(.+)$
+RewriteRule ^ https://%1%{REQUEST_URI} [L,R]
