--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "mheap/silex-assetic": "*",
         "mrclay/minify": "*",
       "symfony/security-csrf": "^2.7",
-      "swiftmailer/swiftmailer": "^5.4"
+      "swiftmailer/swiftmailer": "^5.4",
+      "authorizenet/authorizenet": "~1.8"
     },
     "autoload": {
         "psr-0": { "": "src/" }
