--- a/app/config/routes/challenger.yml
+++ b/app/config/routes/challenger.yml
@@ -21,6 +21,13 @@ challenger.tabs.reset:
     _controller: 'Metamoris\Controllers\ChallengerController::tabFormsAction'
     activeTab: 'reset'
 
+challenger.tabs.reset-password:
+  path:     /reset-password/{token}
+  defaults:
+    _controller: 'Metamoris\Controllers\ChallengerController::resetPasswordAction'
+    activeTab: 'reenter'
+    token: ''
+
 challenger.check-email:
   path:     /check-email
   defaults:
